Index: Community name shouldn't open in new tab

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -214,7 +214,7 @@ script.
 							'</li>' +
 						'{{/is_link}}' +
 						'<li>' +
-							'<a class="js-follow-link" href="/c/{{ project.url }}" target="_blank">{{ project.name }}</a>' +
+							'<a class="js-follow-link" href="/c/{{ project.url }}">{{ project.name }}</a>' +
 						'</li>' +
 						'<li class="item-date">{{ created }}</li>' +
 						'<li class="item-author"><a class="js-follow-link" href="/u/{{ user.username }}">{{ user.full_name }}</a></li>' +
