'Explore More Communities' link to /c/

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -588,6 +588,11 @@ h1 .emoji
     .flyout
       &-title
         border-bottom: thin solid $color-background-dark
+        color: $color-text-dark
+        cursor: pointer
+
+        &:hover
+          color: $color-text-dark-primary
 
       &-content
         display: flex
