Spinner placeholder on dialog box before loading form
Gets rid of the "are you logged in?"

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -211,6 +211,18 @@ a
   transition: top 500ms ease-out
   width: 100%
 
+  // In case the form can't be loaded
+  .dialog-placeholder
+    align-items: center
+    color: $color-text-dark-hint
+    display: flex
+    justify-content: center
+    height: 490px
+    font-size: 2em
+
+    i.spin
+      animation-duration: 5s
+
 .dialog-box
   #col_main
     background-color: initial
