--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -208,7 +208,8 @@ html(lang='en')
 		#app-overlay
 			.overlay-background
 			.dialog-box
-				| {{ _('Are you logged in?') }}
+				.dialog-placeholder
+					i.pi-spin.spin
 
 		#notification-pop(data-url="", data-read-toggle="")
 			.nc-progress
