--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -29,6 +29,7 @@ html(lang='en')
 				document.getElementsByTagName("link").item(3).disabled = false;
 			};
 
+		link(rel="icon", type="image/png", href="{{ url_for('static_dillo', filename='images/favicon.png', v=2112015) }}")
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
 		| {% if config['GOOGLE_SITE_VERIFICATION'] %}
