Use Main Project name instead of Explore More Communities

--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -76,7 +76,8 @@ html(lang='en')
 					.flyout.communities
 						.flyout-hat
 						.flyout-content
-							a.flyout-title(href="{{ url_for('posts.index_all') }} ") Explore More Communities
+							a.flyout-title(href="{{ url_for('posts.index_all') }} ")
+								| {{ main_project.name }}
 							ul
 								| {% for community in communities %}
 								li
