--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -12,10 +12,10 @@ html(lang='en')
 		link(href="{{ url_for('static_pillar', filename='assets/css/font-pillar.css', v=171120161) }}", rel='stylesheet')
 
 		| {% block style %}
+		| {% if project.extension_props.dillo.community_css %}
 		style(type="text/css").
-			:root {
-				--community-theme-accent: #00b7bf
-			}
+			{{ project.extension_props.dillo.community_css }}
+		| {% endif %}
 		| {% endblock style %}
 
 		script(src="{{ url_for('static_dillo', filename='js/vendor/js-cookie-2.1.4.min.js', v=171120161) }}")
