--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -65,17 +65,21 @@
       background-color: $color-background-lighter
 
       &:before
+        align-items: center
         background-color: $color-background-lighter
         border-radius: 50%
-        padding: 5px
         color: $color-danger
         content: '\e85e'
-        display: block
+        display: flex
         font-family: 'pillar-font'
         font-size: 1.2em
+        height: 22px
+        justify-content: center
         position: absolute
         right: 7px
         top: 5px
+        width: 22px
+        z-index: 1
 
     .item-details
       ul
