--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -104,7 +104,7 @@ html(lang='en')
 											span.title Build Your Own Community
 											span.summary.
 												We welcome international users or specialized Blender groups.
-												Tell us why your community belongs here.
+												#[br] Tell us why your community belongs here.
 
 				.d-header-title
 					a.title(href="{{ url_for('posts.index', community_url=project.url) }}")
