--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -654,9 +654,9 @@ body[data-context="post-edit"]
         color: rgba($color-text-dark-hint, .6)
 
 .item-loading
-  color: $color-background-dark
+  color: rgba($color-background-darker, .1)
   font-size: 4em
   left: 50%
-  position: fixed
+  position: absolute
   top: 50%
   transform: translate(-50%, -50%)
