Fix back button not closing fullscreen

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -364,11 +364,13 @@ script.
 
 	var onRenderHandler = function() {
 		twemoji.parse(document.body);
+	}
 
+	window.addEventListener('popstate', function(event) {
 		if (isMobile()){
 			exitFullscreen();
 		}
-	}
+	});
 
 	search.on('render', onRenderHandler);
 
