--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -11,12 +11,20 @@ html(lang='en')
 		link(href='//fonts.googleapis.com/css?family=Oxygen|Open+Sans', rel='stylesheet', type='text/css')
 		link(href="{{ url_for('static_pillar', filename='assets/css/font-pillar.css', v=171120161) }}", rel='stylesheet')
 
-		| {% block style %}
-		| {% if project.extension_props.dillo and project.extension_props.dillo.community_css %}
+		| {% if project.extension_props.dillo %}
 		style(type="text/css").
-			{{ project.extension_props.dillo.community_css }}
+			{% if project.extension_props.dillo.community_theme_color %}
+			:root {
+				--community-theme-color: {{ project.extension_props.dillo.community_theme_color }};
+			}
+			{% endif %}
+
+			{% if project.extension_props.dillo.community_css %}
+				{{ project.extension_props.dillo.community_css }}
+			{% endif %}
 		| {% endif %}
-		| {% endblock style %}
+
+		| {% block style %}{% endblock style %}
 
 		script(src="{{ url_for('static_dillo', filename='js/vendor/js-cookie-2.1.4.min.js', v=171120161) }}")
 
